# neoscript

./: .gitignore  CMakeLists.txt  index.js  index.mjs  lang.ast  main.c
common/: CMakeLists.txt
common/include/: allocator.h  coroutine.h  cstring.h  imap.h  list.h  map.h  strings.h
common/src/: allocator.c  coroutine.c  coroutine_win32.c  cstring.c  imap.c  list.c  map.c  strings.c
compiler/: CMakeLists.txt
compiler/include/: ast.h  astdef.h  compiler.h  position.h  token.h  tokendef.h
compiler/src/: ast.c  compiler.c  token.c
engine/: CMakeLists.txt
engine/include/: atom.h  context.h  runtime.h  scope.h  type.h  typedef.h  value.h
engine/src/: atom.c  context.c  runtime.c  scope.c  type.c  value.c
include/engine/: atom.h  closure.h  context.h  runtime.h  scope.h  type.h  value.h
include/util/: imap.h  map.h  strings.h
include/vm/: operator.h  type.h  vm.h
src/: main.c
src/engine/: atom.c  closure.c  context.c  runtime.c  scope.c  type.c  value.c
src/util/: imap.c  list.c  map.c  strings.c
src/vm/: vm.c
tests/: CMakeLists.txt  TestCall.c
tests/TestCell/: main.c
tests/TestCoroutine/: main.c
tests/TestType/: main.c
tests/engine/: call.c
util/: CMakeLists.txt
util/include/: map.h
vm/: CMakeLists.txt
vm/include/: ast.h  astdef.h  convert.h  operatordef.h  resolverdef.h  tostring.h  typedef.h  vm.h
vm/include/ast/: ast.h
vm/include/operator/: expr.h
vm/include/resolver/: add.h  add_and_set.h  and.h  and_and_set.h  binary.h  boolean.h  call.h  comma.h  dec.h  div.h  div_and_set.h  eq.h  float.h  gae.h  gt.h  inc.h  integer.h  lae.h  le.h  left_shift.h  left_shift_and_set.h  logic_and.h  logic_not.h  logic_or.h  member.h  mod.h  mod_and_set.h  mul.h  mul_and_set.h  ne.h  not.h  null.h  number.h  or.h  or_and_set.h  right_shift.h  right_shift_and_set.h  set.h  string.h  sub.h  (+4 more)
vm/include/type/: array.h  boolean.h  custom.h  float.h  float32.h  float64.h  int16.h  int32.h  int64.h  int8.h  integer.h  object.h  string.h  uint16.h  uint32.h  uint64.h  uint8.h
vm/src/: ast.c  tostring.c  typedef.c  vm.c
vm/src/ast/: ast.c
vm/src/operator/: expr.c
vm/src/resolver/: add.c  add_and_set.c  and.c  and_and_set.c  binary.c  boolean.c  call.c  comma.c  dec.c  div.c  div_and_set.c  eq.c  float.c  gae.c  gt.c  inc.c  integer.c  lae.c  le.c  left_shift.c  left_shift_and_set.c  logic_and.c  logic_not.c  logic_or.c  member.c  mod.c  mod_and_set.c  mul.c  mul_and_set.c  ne.c  not.c  null.c  number.c  or.c  or_and_set.c  right_shift.c  right_shift_and_set.c  set.c  string.c  sub.c  (+4 more)
vm/src/type/: array.c  boolean.c  custom.c  float.c  float32.c  float64.c  int16.c  int32.c  int64.c  int8.c  integer.c  object.c  string.c  uint16.c  uint32.c  uint64.c  uint8.c
(+55 files in other folders)
