cmake_minimum_required(VERSION 3.12)
project(neo C)
set(NEO_PROJECT_NAME ${PROJECT_NAME})
set(NEO_OUTPUT_DIR ${PROJECT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
include_directories(.)
add_subdirectory(./engine)
add_subdirectory(./vm)
add_subdirectory(./common)
add_subdirectory(./compiler)

add_executable(${NEO_PROJECT_NAME} ./main.c)
target_link_libraries(${PROJECT_NAME} PRIVATE ${NEO_PROJECT_NAME}-compiler ${NEO_PROJECT_NAME}-engine ${NEO_PROJECT_NAME}-vm ${NEO_PROJECT_NAME}-common)

enable_testing()
add_subdirectory(./tests)
